--- a/style.css
+++ b/style.css
@@ -1,1 +1,68 @@
 @charset "UTF-8";
+
+@font-face {
+    font-family: indroid;
+    src: url('fontes/idroid.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+body {
+    background-color: #E7E5C1;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+}
+header {
+    margin: 0 auto;
+    padding: 20px;
+    background-image: linear-gradient(to bottom, #1F8D50, #1b4930 );
+}
+nav {
+    padding: 0px;
+}
+nav > a {
+    color: #88E1AD;
+    padding: 7px;
+    text-decoration: none;
+}
+main {
+    background-color: white;
+    width: 1000px;
+    padding: 20px;
+    margin: 0 auto;
+}
+p {
+    text-indent: 3em;
+    text-align: auto;
+}
+#headerTittle {
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: lighter;
+    color: white;
+    font-size: 3em;
+    margin-top: 0px;
+}
+#headerSubTittle {
+    text-align: center;
+    font-family: arial;
+    font-size: 19px;
+    font-weight: normal;
+    color: white;
+    margin: 20px;
+}
+#mainTittle {
+    font-family: indroid;
+    color: #1b4930;
+    font-size: 2em;
+    margin-top: 0px;
+    padding: 3px;
+
+}
+.mainSubTittles {
+    color: #286645;
+    font-family: indroid;
+    background-image:linear-gradient(to right, #88E1AD, white);
+}
+#querAprenderMais h2{
+    font-family: Arial, Helvetica, sans-serif;
+}
