--- a/style.css
+++ b/style.css
@@ -1,68 +1,207 @@
 @charset "UTF-8";
 
 @font-face {
-    font-family: indroid;
+    font-family: 'Android';
     src: url('fontes/idroid.otf') format('opentype');
     font-weight: normal;
-    font-style: normal;
 }
-body {
-    background-color: #E7E5C1;
-    font-family: Arial, Helvetica, sans-serif;
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+:root {
+    --cor0: #c5ebd6;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
+
+    --fonte_padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte_destaque: 'Bebas Neue', 'cursive';
+    --fonte_android: 'Android', 'cursive';
+}
+
+* {
     margin: 0px;
-}
-header {
-    margin: 0 auto;
-    padding: 20px;
-    background-image: linear-gradient(to bottom, #1F8D50, #1b4930 );
-}
-nav {
     padding: 0px;
 }
+
+body {
+    background-color: #E7E6C1;
+    font-family: var(--fonte_padrao);
+}
+
+header {
+    background-image:linear-gradient(to bottom, var(--cor3), var(--cor5)) ;
+    min-height: 150px;
+    text-align: center;
+    padding-top: 40px;
+}
+
+header > h1{
+    color: white;
+    font-family: var(--fonte_destaque);
+    margin-bottom: 30px;
+    font-size: 3em;
+    font-weight: normal;
+    text-shadow: 1px 2px 0px rgba(0, 0, 0, 0.326);
+}
+
+header > p{
+    font-family: var(--fonte_padrao);
+    font-size: 1.2em;
+    color: white;
+    max-width: 600px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin: auto; 
+    margin-bottom: 20px;
+    text-shadow: 1px 2px 0px rgba(0, 0, 0, 0.326);
+}
+
+nav {
+    background-color: var(--cor5);
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.184);
+}
+
 nav > a {
-    color: #88E1AD;
-    padding: 7px;
+    color: var(--cor1);
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: .5;
+}
+
+nav > a:hover {
+    background-color: var(--cor3);
+    color: var(--cor5);
+}
+
+main {
+    max-width: 1000px;
+    min-width: 300px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.423);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+article > h1 {
+    color: var(--cor5);
+    font-family: var(--fonte_android);
+    font-weight: normal;
+    font-size: 1.8em;
+}
+
+section > h2 {
+    font-family: var(--fonte_android);
+    color: var(--cor4);
+    font-size: 1.3em;
+    font-weight: normal;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+}
+
+main p {
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 30px;
+    line-height: 2em;
+}
+
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
+}
+
+section a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor5);
+    background-color: var(--cor1);
+    padding: 2px 6px;
+}
+
+section a:hover {
+    text-decoration: underline;
+    color: var(--cor4);
+}
+
+main  img {
+    width: 100%;
+}
+
+main img.pequena{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+div.video {
+   background-color: var(--cor5);
+   margin: 0px -20px 30px -20px;
+   padding: 20px;
+   padding-bottom: 58%;
+   position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.229);
+}
+
+aside > h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 5px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px
+}
+
+aside  ul {
+    list-style-position: inside;
+    columns: 2;
+}
+
+aside a {
+    color: var(--cor5);
+    font-weight: bold;
+    text-decoration: none;
+    background-color: var(--cor3);
+}
+
+aside a:hover {
+    text-decoration: underline;
+    color: var(--cor4);
+}
+
+footer {
+    background-color: var(--cor5);
+    color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer a {
+    color: white;
+    font-weight: bolder;
     text-decoration: none;
 }
-main {
-    background-color: white;
-    width: 1000px;
-    padding: 20px;
-    margin: 0 auto;
-}
-p {
-    text-indent: 3em;
-    text-align: auto;
-}
-#headerTittle {
-    text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: lighter;
-    color: white;
-    font-size: 3em;
-    margin-top: 0px;
-}
-#headerSubTittle {
-    text-align: center;
-    font-family: arial;
-    font-size: 19px;
-    font-weight: normal;
-    color: white;
-    margin: 20px;
-}
-#mainTittle {
-    font-family: indroid;
-    color: #1b4930;
-    font-size: 2em;
-    margin-top: 0px;
-    padding: 3px;
 
-}
-.mainSubTittles {
-    color: #286645;
-    font-family: indroid;
-    background-image:linear-gradient(to right, #88E1AD, white);
-}
-#querAprenderMais h2{
-    font-family: Arial, Helvetica, sans-serif;
+footer a:hover {
+    text-decoration: underline;
+    color: var(--cor1);
 }
